# c_repo

./: .gitmodules  README.md
.github/workflows/: build_auth_with_cmac.yml  build_frame_oop_with_crc.yml  ci-cd-actions.yml
auth_with_cmac/: CMakeLists.txt
auth_with_cmac/inc/: auth_with_cmac.h
auth_with_cmac/src/: auth_with_cmac.c  main.c
binary_tree/: CMakeLists.txt  binary_tree  binary_tree.c
binary_tree/src/: binary_tree.c  main.c
capture_screen/: .gitignore  CMakeLists.txt
capture_screen/inc/: binary_tree.h
capture_screen/src/: main.c  serial_comm.c
darwin_service_app/: CMakeLists.txt
darwin_service_app/inc/: main.h
darwin_service_app/src/: main.c
darwin_service_app/tools/: format.sh
find_num_of_same_char_in_string/: solution.c
frame_oop_with_crc/: .gitignore  CMakeLists.txt  Makefile  code-format.sh  frame_oop_with_crc  frame_oop_with_crc.c  frame_oop_with_crc.h
frame_oop_with_crc/inc/: frame_oop_with_crc.h
frame_oop_with_crc/src/: frame_oop_with_crc.c  main.c
tcp_socket/: CMakeLists.txt
tcp_socket/inc/: hex_dump.h  tcp_listener.h  tcp_msg.h
tcp_socket/src/: hex_dump.c  tcp_sock_client.c  tcp_sock_server.c
